# tmux-mobile

./: .gitignore  PROJECT_STATUS.md  QUICKSTART.md  README.md  TASK.md  index.html  package-lock.json  package.json  test.html  vite.config.js
.agent/: architecture.md  lessons-learned.md  troubleshooting.md
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  fs.rs  lib.rs  main.rs  server.rs  tmux.rs
src/lib/: ChatView.svelte  Files.svelte  Icon.svelte  Sessions.svelte  Settings.svelte  Terminal.svelte  parsers.js  ws.js
