[package]
name = "tmux-mobile"
version = "0.1.0"
edition = "2021"
default-run = "tmux-mobile"

[lib]
name = "tmux_mobile"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tmux-mobile"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tauri = { version = "2", features = [] }
toml = "1.0.3"
